[project]
name = "uds-client"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "udsoncan>=1.0",
    "doipclient>=1.0",
    "pydantic>=2.0",
    "structlog>=24.0",
    "PySide6>=6.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
    "pytest-cov>=5.0",
    "pytest-qt>=4.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--cov=src", "--cov-report=term-missing"]
filterwarnings = ["ignore::pytest.PytestCollectionWarning"]

[tool.setuptools]
py-modules = ["ecu_simulator", "gui_main", "main"]
